Fix code styles on Firefox Mobile

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -7,7 +7,7 @@ $breakpoint-desktop: 1280px;
 
 html {
   --font-sans: "National Park", sans-serif;
-  --font-serif: "Courier", serif;
+  --font-serif: "Courier", monospace;
 
   /* Background Colors */
   --bg-yellow: #dfed33;
